Adding : RAG USING Hyde and NVIDIA NIM(Nvidia Inference Models)

--- a/RAG_Project_using_Hyde_and_Nvidia_NIM.ipynb
+++ b/RAG_Project_using_Hyde_and_Nvidia_NIM.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP0aZ/Cf85zTd79of8dshiM",
+      "authorship_tag": "ABX9TyP4cUYju38M3LJZ4s5A85vt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -841,7 +841,7 @@
         "model = ChatNVIDIA(model=\"mistral_7b\")\n",
         "```\n",
         "\n",
-        "The NVIDIA Mistral model is initialized. Prompts and output parsers are also set up.\n",
+        "The Mistral model is initialized from NVIDIA NIM Microservice. Prompts and output parsers are also set up.\n",
         "\n",
         "### Hypothetical Embeddings (HyDE) Setup\n",
         "\n",
@@ -904,7 +904,7 @@
         "\n",
         "### Summary\n",
         "\n",
-        "This script demonstrates how to set up a Retrieval-Augmented Generation (RAG) pipeline using NVIDIA's Mistral model, Langchain's utilities, and FAISS. The pipeline consists of loading and splitting documents, creating a vector store, setting up hypothetical embeddings, retrieving relevant documents, and generating answers based on the retrieved context."
+        "This script demonstrates how to set up a Retrieval-Augmented Generation (RAG) pipeline using Mistralx7B using NVIDIA NIM Microservice Platform Seamlessly, Langchain's utilities, and FAISS. The pipeline consists of loading and splitting documents, creating a vector store, setting up hypothetical embeddings, retrieving relevant documents, and generating answers based on the retrieved context."
       ],
       "metadata": {
         "id": "ygiQ5FPyGLZo"
